--- a/app/src/main/res/layout/row_fact_check.xml
+++ b/app/src/main/res/layout/row_fact_check.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:background="@color/colorPrimary"
+        android:background="@color/app_background"
         android:orientation="vertical">
 
         <androidx.constraintlayout.widget.ConstraintLayout
