--- a/app/src/main/res/layout/bubble_accessibility_success.xml
+++ b/app/src/main/res/layout/bubble_accessibility_success.xml
@@ -13,7 +13,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/app_background"
             android:orientation="vertical">
 
             <FrameLayout
