--- a/app/src/main/res/layout/bubble_article_view.xml
+++ b/app/src/main/res/layout/bubble_article_view.xml
@@ -71,7 +71,7 @@
             android:id="@+id/llRootNewsView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimary"
+            android:background="@color/app_background"
             android:orientation="vertical">
 
             <androidx.appcompat.widget.AppCompatTextView
