--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#fbecec</color>
+    <color name="colorPrimary">#FFF</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#373e43</color>
+    <color name="colorAccent">#FF725E</color>
+
+
+    <color name="app_background">@color/white</color>
 
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
